Responsive done, dark mode done, bugs fixed

--- a/views/css/chef-index.css
+++ b/views/css/chef-index.css
@@ -682,8 +682,10 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     align-items: center;
     color: #FFB5B5;
+    margin: 9% 0 0 0;
 }
 #notFoundRecipes img{
     width: 25vh;
@@ -993,7 +995,21 @@ section{
         width: 6vh;
         height: 6vh;
     }.categories-down{
-        visibility:hidden;
+        bottom: 8.5%;
+        height: fit-content;
+        flex-wrap: wrap;
+    }
+    .categoryDiv img{
+        display: none;
+    }
+    .categoryDiv{
+        width: 25%;
+        margin-bottom: 1%;
+    }
+    #btnCategoriesShow{
+        bottom: 30vh;
+        right: 47%;
+        z-index: 999999;
     }
 }
 @media (max-width: 690px) {
@@ -1048,16 +1064,41 @@ section{
     }.next-text-recipe a p{
         font-size: .90rem;
     }
+    .categoryDiv{
+        width: 35%;
+    }
+    #btnCategoriesShow{
+        bottom: 36vh;
+        right: 44%;
+    }
 }
 @media (max-width: 430px){
     .summary-info article p{
         font-size: 1rem;
+    }
+    #btnCategoriesShow{
+        bottom: 70vh;
     }
     .description{
         font-size: .9rem;
     }
     .chef-social-media a img{
         object-fit: contain;
+    }
+    .Darkindice{
+        width: 65%;
+        margin-bottom: 5%;
+    }
+    .categories-down{
+        height: fit-content;
+    }
+    #title-ctc{
+        font-size: 1.5em;
+    }
+}
+@media (max-width: 280px){
+    #title-ctc{
+        font-size: 1.5em;
     }
 }
 @media (max-height: 783px){
